--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.data.mongodb.uri=mongodb://localhost:27017/cinematics
+
+amazonProperties.endpointUrl=https://s3.${AWS_REGION}.amazonaws.com
+amazonProperties.region=${AWS_REGION}
+amazonProperties.accessKey=${AWS_ACCESS_KEY}
+amazonProperties.secretKey=${AWS_SECRET_KEY}
+amazonProperties.bucketName=${AWS_BUCKET_NAME}
 
