Update image name

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,8 @@ services:
     image: mongo
 
   cinematics:
-    image: cinematics
+    build: .
+    image: registry.gitlab.com/ajtuss/cinematics
     env_file:
       - .env
     ports:
