Add ImageController test

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,4 +5,5 @@ amazonProperties.region=eu-central-1
 amazonProperties.accessKey=fakeaccess
 amazonProperties.secretKey=fakesecret
 amazonProperties.bucketName=cinematics-bucket
+spring.main.allow-bean-definition-overriding=true
 
